--- a/announcement-test.yaml
+++ b/announcement-test.yaml
@@ -3,7 +3,8 @@ esphome:
   friendly_name: announcement-test
 
 esp32:
-  board: esp32-s3-devkitc-1
+#  board: esp32-s3-devkitc-1
+  board: tinypico
   framework:
     type: arduino
 
@@ -34,3 +35,24 @@ captive_portal:
 
 web_server:
   port: 80
+
+i2s_audio:
+#  i2s_lrclk_pin: GPIO1
+#  i2s_bclk_pin: GPIO2
+  i2s_lrclk_pin: GPIO15
+  i2s_bclk_pin: GPIO14
+
+media_player:
+  - platform: i2s_audio
+    name: ESPHome I2S Media Player
+    dac_type: external
+#    i2s_dout_pin: GPIO3
+    i2s_dout_pin: GPIO4
+    mode: mono
+
+# http://nrk-mms-live.telenorcdn.net:80/nrk_radio_jazz_mp3_h
+
+
+# stereo output:
+# https://community.home-assistant.io/t/i2s-esp32-stereo-output-two-max98357a/573741
+# UPDATE: Figured out stereo output. Problem was in MAX98357A configuration. By default it is configured to mix outputs using 1M resistor (to VDD) so to configure it to left and right channels, SD needs to be pulled-up to VDD with jumper (0 Ohms) that is going to be LEFT channel and with 370-470K resistor to VDD to output Right channel.
