--- a/announcement-test.yaml
+++ b/announcement-test.yaml
@@ -14,7 +14,7 @@ logger:
 # Enable Home Assistant API
 api:
   encryption:
-    key: "zN1Esdage6+IGVdOhMgqwp/voecu+sfrqEjI068lpX4="
+    key: "zN1Esdage6+TGVdOhMgqwp/voecu+sfrqEjI068lpX4="
 
 ota:
   - platform: esphome
@@ -36,19 +36,19 @@ captive_portal:
 web_server:
   port: 80
 
+prometheus:
+
 i2s_audio:
-#  i2s_lrclk_pin: GPIO1
-#  i2s_bclk_pin: GPIO2
-  i2s_lrclk_pin: GPIO15
-  i2s_bclk_pin: GPIO14
+  i2s_lrclk_pin: GPIO27
+  i2s_bclk_pin: GPIO26
 
 media_player:
   - platform: i2s_audio
     name: ESPHome I2S Media Player
     dac_type: external
-#    i2s_dout_pin: GPIO3
-    i2s_dout_pin: GPIO4
+    i2s_dout_pin: GPIO25
     mode: mono
+
 
 # http://nrk-mms-live.telenorcdn.net:80/nrk_radio_jazz_mp3_h
 
