--- a/doorbell-chime-hallway.yaml
+++ b/doorbell-chime-hallway.yaml
@@ -1,15 +1,16 @@
 esphome:
   name: doorbell-chime-hallway
   friendly_name: doorbell-chime-hallway
-#  includes:
-#    - custom/chimes.h
+  includes:
+    - custom/chimes.h
+  platformio_options:
+    board_build.partitions: huge_app.csv
 
 esp32:
   board: tinypico
   framework:
     type: arduino
   flash_size: 4MB
-  partitions: /Users/david/code/personal/esphome/custom/huge_app.csv
 
 logger:
   level: VERY_VERBOSE
@@ -41,9 +42,9 @@ external_components:
   - source: github://jesserockz/esphome-components
     components: [file]
 
-file:
-  - id: doorbell_wav
-    file: assets/doorbell.wav
+#file:
+#  - id: doorbell_wav
+#    file: assets/doorbell.wav
 
 media_player:
   - platform: i2s_audio
@@ -67,7 +68,7 @@ speaker:
     i2s_dout_pin:
       number: GPIO25
       allow_other_uses: true
-    channel: mono
+    channel: stereo
     sample_rate: 44100
     bits_per_sample: 16bit
 
@@ -81,9 +82,10 @@ button:
           id(i2s_speaker).start();
       - delay: 50ms
       - lambda: |-
-          ESP_LOGD("AUDIO", "File size: %d", sizeof(id(doorbell_wav)));
-          id(i2s_speaker).set_volume(0.25);
-          id(i2s_speaker).play(id(doorbell_wav), sizeof(id(doorbell_wav)));
+          id(i2s_speaker).set_volume(0.50);
+          id(i2s_speaker).play(doorbell_wav, doorbell_wav_len);
+#          ESP_LOGD("AUDIO", "File size: %d", sizeof(id(doorbell_1_wav)));
+#          id(i2s_speaker).play(id(doorbell_wav), sizeof(id(doorbell_wav)));
 
 #    on_press:
 #      then:
