custom speaker component

--- a/doorbell-chime-hallway.yaml
+++ b/doorbell-chime-hallway.yaml
@@ -1,19 +1,20 @@
 esphome:
   name: doorbell-chime-hallway
   friendly_name: doorbell-chime-hallway
-  includes:
-    - custom/chimes.h
-  platformio_options:
-    board_build.partitions: huge_app.csv
+#  includes:
+#    - custom/chimes.h
+#  platformio_options:
+#    board_build.partitions: huge_app.csv
 
 esp32:
   board: tinypico
   framework:
-    type: arduino
+    type: esp-idf
   flash_size: 4MB
+  partitions: custom/partition.csv
 
 logger:
-  level: VERY_VERBOSE
+#  level: VERY_VERBOSE
 
 api:
   encryption:
@@ -33,57 +34,84 @@ web_server:
 
 prometheus:
 
-i2s_audio:
-  i2s_lrclk_pin: GPIO27
-  i2s_bclk_pin: GPIO26
-
-
 external_components:
-  - source: github://jesserockz/esphome-components
-    components: [file]
+  #-------------------------------------------
+  # COMPONENT AUDIO
+  #-------------------------------------------
+  - source: github://pr#7672
+    components:
+      - audio
+      - speaker
+      - i2s_audio
+      - speaker
+    refresh: 0s
+
+
+#external_components:
+#  - source: github://jesserockz/esphome-components
+#    components: [file]
 
 #file:
 #  - id: doorbell_wav
 #    file: assets/doorbell.wav
 
-media_player:
-  - platform: i2s_audio
-    name: ESPHome I2S Media Player
-    dac_type: external
-    i2s_dout_pin:
-      number: GPIO25
-      allow_other_uses: true
-    mode: stereo
-    on_play:
-      - logger.log: "Playback started!"
-    on_pause:
-      - logger.log: "Playback paused!"
-    on_idle:
-      - logger.log: "Playback finished!"
+i2s_audio:
+  i2s_lrclk_pin: GPIO27
+  i2s_bclk_pin: GPIO26
 
+# use new speaker media player when it arrives
+# https://github.com/esphome/esphome/pull/7672
 speaker:
   - platform: i2s_audio
     id: i2s_speaker
     dac_type: external
     i2s_dout_pin:
       number: GPIO25
-      allow_other_uses: true
-    channel: stereo
+#      allow_other_uses: true
+    channel: mono
     sample_rate: 44100
     bits_per_sample: 16bit
+
+media_player:
+#  - platform: i2s_audio
+#    name: ESPHome I2S Media Player
+#    dac_type: external
+#    i2s_dout_pin:
+#      number: GPIO25
+#      allow_other_uses: true
+#    mode: stereo
+#    on_play:
+#      - logger.log: "Playback started!"
+#    on_pause:
+#      - logger.log: "Playback paused!"
+#    on_idle:
+#      - logger.log: "Playback finished!"
+  - platform: speaker
+    name: ESPHome I2S Media Player
+    id: speaker_media_player
+    speaker: i2s_speaker
+    sample_rate: 44100
+    files:
+      - id: doorbell_flac
+        file: assets/doorbell-2chan.flac
+
+
 
 button:
   - platform: template
     id: doorbell_button
-    name: "Doorbell"
-    icon: "mdi:doorbell"
+    name: Doorbell
+    icon: "mdi:bell"
     on_press:
-      - lambda: |-
-          id(i2s_speaker).start();
-      - delay: 50ms
-      - lambda: |-
-          id(i2s_speaker).set_volume(0.50);
-          id(i2s_speaker).play(doorbell_wav, doorbell_wav_len);
+      - speaker_media_player.play_local_media_file: doorbell_flac
+
+#      - lambda: |-
+#          id(i2s_speaker).start();
+#      - delay: 50ms
+#      - lambda: |-
+#          id(i2s_speaker).set_volume(0.50);
+#          id(i2s_speaker).play(doorbell_wav, doorbell_wav_len);
+
 #          ESP_LOGD("AUDIO", "File size: %d", sizeof(id(doorbell_1_wav)));
 #          id(i2s_speaker).play(id(doorbell_wav), sizeof(id(doorbell_wav)));
 
