--- a/hobby-room-climate.yaml
+++ b/hobby-room-climate.yaml
@@ -2,36 +2,41 @@ esphome:
   name: hobby-room-climate
   friendly_name: hobby-room-climate
 
+# https://community.home-assistant.io/t/esp32-s3-devkitc-1-n16r8-using-psram-howto/652601/8
+psram:
+  mode: octal
+  speed: 80MHz
+
 esp32:
-  board: nodemcu-32s
+  board: seeed_xiao_esp32s3
   framework:
-    type: arduino
+    type: esp-idf
+  flash_size: 8MB
 
-# Enable logging
 logger:
+#  level: VERY_VERBOSE
 
-# Enable Home Assistant API
 api:
   encryption:
-    key: "YDTi41srVaQfEDYIrxK+V+heiTENNS1XgW0QrKxJBMU="
+    key: !secret api_encryption_key
 
 ota:
-  platform: esphome
+  - platform: esphome
+    password: !secret ota_password
 
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
+  power_save_mode: none
 
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "Esphome-Web-9D7A74"
-    password: "tF4COpUWRoU2"
+web_server:
+  port: 80
 
-captive_portal:
+prometheus:
 
 i2c:
-  sda: 21
-  scl: 22
+  sda: GPIO5
+  scl: GPIO6
   scan: true
 
 sensor:
