--- a/hobby-room-climate.yaml
+++ b/hobby-room-climate.yaml
@@ -28,6 +28,7 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   power_save_mode: none
+  fast_connect: true
 
 web_server:
   port: 80
