--- a/media-player-sandbox.yaml
+++ b/media-player-sandbox.yaml
@@ -37,6 +37,7 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   power_save_mode: none
+  fast_connect: true
 
 web_server:
   port: 80
@@ -69,8 +70,8 @@ external_components:
 #    file: assets/doorbell.wav
 
 i2s_audio:
-  i2s_lrclk_pin: GPIO1 #GPIO27
-  i2s_bclk_pin: GPIO2  #GPIO26
+  i2s_lrclk_pin: GPIO5
+  i2s_bclk_pin: GPIO4
 
 # use new speaker media player when it arrives
 # https://github.com/esphome/esphome/pull/7672
@@ -79,7 +80,7 @@ speaker:
     id: i2s_speaker
     dac_type: external
     i2s_dout_pin:
-      number: GPIO3   #GPIO25
+      number: GPIO3
 #      allow_other_uses: true
     channel: stereo
     sample_rate: 44100
