--- a/hobby-room-climate.yaml
+++ b/hobby-room-climate.yaml
@@ -8,9 +8,11 @@ psram:
   speed: 80MHz
 
 esp32:
-  board: seeed_xiao_esp32s3
+  board: esp32-s3-devkitc-1
+#  board: seeed_xiao_esp32s3
   framework:
-    type: esp-idf
+    type: arduino
+#    type: esp-idf  # wifi connection problems with esp-idf :/
   flash_size: 8MB
 
 logger:
@@ -27,8 +29,7 @@ ota:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  power_save_mode: none
-  fast_connect: true
+#  power_save_mode: none
 
 web_server:
   port: 80
@@ -49,3 +50,8 @@ sensor:
     humidity:
       name: "Hobby Room Humidity"
     update_interval: 5s
+
+status_led:
+  pin:
+    number: GPIO21  #LED_BUILTIN
+    inverted: true
