--- a/media-player-sandbox.yaml
+++ b/media-player-sandbox.yaml
@@ -37,12 +37,16 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   power_save_mode: none
-  fast_connect: true
 
 web_server:
   port: 80
 
 prometheus:
+
+status_led:
+  pin:
+    number: GPIO21  #LED_BUILTIN
+    inverted: true
 
 external_components:
   #-------------------------------------------
