--- a/media-player-sandbox.yaml
+++ b/media-player-sandbox.yaml
@@ -36,7 +36,7 @@ ota:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  power_save_mode: none
+  output_power: 8.5dB  #seeed_xiao_esp32s3 likes this setting, see https://github.com/espressif/arduino-esp32/issues/2144#issuecomment-2028949116
 
 web_server:
   port: 80
