--- a/doorbell-chime-hallway.yaml
+++ b/doorbell-chime-hallway.yaml
@@ -1,18 +1,18 @@
 esphome:
   name: doorbell-chime-hallway
   friendly_name: doorbell-chime-hallway
-  on_boot:
-    priority: -100  # Lower priority ensures WiFi is ready
-    then:
-      - media_player.volume_set: 5%
-      - media_player.play_media: !lambda return id(startup_sound_url).state.c_str();
-      - wait_until:
-          condition:
-            media_player.is_playing: i2s_media_player
-      - wait_until:
-          condition:
-           media_player.is_idle: i2s_media_player
-      - media_player.volume_set: 90%
+#  on_boot:
+#    priority: -100  # Lower priority ensures WiFi is ready
+#    then:
+#      - media_player.volume_set: 5%
+#      #- media_player.play_media: !lambda return id(startup_sound_url).state.c_str();
+#      - wait_until:
+#          condition:
+#            media_player.is_playing: i2s_media_player
+#      - wait_until:
+#          condition:
+#           media_player.is_idle: i2s_media_player
+#      - media_player.volume_set: 90%
 
 # https://community.home-assistant.io/t/esp32-s3-devkitc-1-n16r8-using-psram-howto/652601/8
 psram:
@@ -23,7 +23,6 @@ esp32:
   board: tinypico
   framework:
     type: arduino
-  flash_size: 4MB
 
 logger:
 #  level: VERY_VERBOSE
@@ -39,11 +38,18 @@ ota:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
+  power_save_mode: none
+  # esp32 needs the output_power setting, see https://github.com/espressif/arduino-esp32/issues/2144#issuecomment-2028949116
+  output_power: 8.5dB
 
 web_server:
   port: 80
 
 prometheus:
+
+#status_led:
+# https://help.unexpectedmaker.com/index.php/knowledge-base/esphome-with-tinypico-apa-rgb-led/
+# cool idea for the rgb led: https://github.com/esphome/esphome/pull/5814:
 
 i2s_audio:
   i2s_lrclk_pin: GPIO27
@@ -52,7 +58,6 @@ i2s_audio:
 media_player:
   - platform: i2s_audio
     id: i2s_media_player
-    name: ESPHome I2S Media Player
     dac_type: external
     i2s_dout_pin:
       number: GPIO25
