--- a/hobby-room-climate.yaml
+++ b/hobby-room-climate.yaml
@@ -11,7 +11,6 @@ esp32:
   board: seeed_xiao_esp32s3
   framework:
     type: esp-idf
-  flash_size: 8MB
 
 logger:
 #  level: VERY_VERBOSE
@@ -27,7 +26,9 @@ ota:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  output_power: 8.5dB  #seeed_xiao_esp32s3 likes this setting, see https://github.com/espressif/arduino-esp32/issues/2144#issuecomment-2028949116
+  power_save_mode: none
+  # esp32 needs the output_power setting, see https://github.com/espressif/arduino-esp32/issues/2144#issuecomment-2028949116
+  output_power: 8.5dB
 
 web_server:
   port: 80
