update secrets template

--- a/common/secrets-example.yaml
+++ b/common/secrets-example.yaml
@@ -1,2 +1,9 @@
 wifi_ssid: "XXX"
 wifi_password: "YYY"
+
+# Encryption key for HA API access.
+# Generate a random 32-bit key with `openssl rand -base64 32`
+api_encryption_key:
+
+# Set password for OTA updates.
+ota_password:
