--- a/doorbell-chime-hallway.yaml
+++ b/doorbell-chime-hallway.yaml
@@ -16,9 +16,9 @@ esphome:
       - media_player.volume_set: 90%
 
 # https://community.home-assistant.io/t/esp32-s3-devkitc-1-n16r8-using-psram-howto/652601/8
-psram:
-  mode: octal
-  speed: 80MHz
+#psram:
+#  mode: octal
+#  speed: 80MHz
 
 esp32:
   board: tinypico
