--- a/wopr.yaml
+++ b/wopr.yaml
@@ -54,64 +54,76 @@ display:
     intensity: 0
     update_interval: 100ms
     lambda: |-
+      struct PixelInfo {
+        uint8_t value;  // Bit field for 8 rows (0 or 1)
+        uint32_t next_update_times[8];  // Next update time for each row in this column
+      };
+
       static uint32_t last_update = 0;
-      static uint32_t next_update_interval = 0;
       static bool first_run = true;
 
-      static uint8_t buffer[96] = {0};  // 12 chips * 8 columns
+      static PixelInfo buffer[96] = {0};  // 12 chips * 8 columns
 
       if (first_run) {
         ESP_LOGI("WOPR", "Initializing WOPR display pattern generator");
         last_update = 0;
-        next_update_interval = 0;
-        memset(buffer, 0, sizeof(buffer));
+
+        // Initialize all pixels with 0 value and random update times
+        for (int x = 0; x < 96; x++) {
+          buffer[x].value = 0;
+          for (int y = 0; y < 8; y++) {
+            // Random time between 0 and 2000ms
+            buffer[x].next_update_times[y] = random() % 2000;
+          }
+        }
+
         first_run = false;
       }
 
       uint32_t now = millis();
 
-      if (now - last_update > next_update_interval) {
-        ESP_LOGD("WOPR", "Updating display pattern after %u ms", next_update_interval);
+      // Check each pixel for updates
+      int changed_pixels = 0;
+      int on_pixels = 0;
 
-        // Randomly set pixels in our buffer
-        ESP_LOGD("WOPR", "Generating random pixel pattern");
-        int changed_pixels = 0;
-        int on_pixels = 0;
+      for (int x = 0; x < 96; x++) {
         for (int y = 0; y < 8; y++) {
-          if (((double) random()/RAND_MAX) < 0.5) {  // 50% chance to change a row
-            for (int x = 0; x < 96; x++) {
-              if (((double) random()/RAND_MAX) < 0.5) {  // 50% chance to change a pixel
-                changed_pixels++;
-                if (((double) random()/RAND_MAX) < 0.5) {
-                  buffer[x] |= (1 << y);  // Set bit
+          // Check if this pixel is due for an update
+          if (now >= buffer[x].next_update_times[y]) {
+            // 50% chance to change the pixel
+            if (((double) random()/RAND_MAX) < 0.5) {
+              changed_pixels++;
+
+              // Get current state
+              bool current_state = (buffer[x].value & (1 << y)) != 0;
+
+              // 50% chance to set or clear
+              if (((double) random()/RAND_MAX) < 0.5) {
+                buffer[x].value |= (1 << y);  // Set bit
+                if (!current_state) {  // Only count if state changed
                   on_pixels++;
-                } else {
-                  buffer[x] &= ~(1 << y);  // Clear bit
                 }
+              } else {
+                buffer[x].value &= ~(1 << y);  // Clear bit
               }
             }
+
+            // Set next update time (random between 0 and 2 seconds)
+            uint32_t next_update_delay = (uint32_t)(((double) random()/RAND_MAX) * 2000);
+            buffer[x].next_update_times[y] = now + next_update_delay;
           }
         }
-        ESP_LOGD("WOPR", "Changed %d pixels, %d turned on", changed_pixels, on_pixels);
-
-        double time_choice = ((double) random()/RAND_MAX);
-        if (time_choice < 0.25) {
-          next_update_interval = 200;
-        } else if (time_choice < 0.5) {
-          next_update_interval = 600;
-        } else if (time_choice < 0.75) {
-          next_update_interval = 1000;
-        } else {
-          next_update_interval = 1200;
-        }
-        ESP_LOGD("WOPR", "Next update in %u ms", next_update_interval);
-
-        last_update = now;
       }
+
+      if (changed_pixels > 0) {
+        ESP_LOGD("WOPR", "Changed %d pixels, %d turned on", changed_pixels, on_pixels);
+      }
+
+      last_update = now;
 
       for (int y = 0; y < 8; y++) {
         for (int x = 0; x < 96; x++) {
-          if (buffer[x] & (1 << y)) {
+          if (buffer[x].value & (1 << y)) {
             id(max7219_display).draw_pixel_at(x, y, COLOR_ON);
           }
         }
